# BESS-JPL

./: pyproject.toml
BESS/: BESS.py  constants.py  load_C4_fraction.py  load_NDVI_maximum.py  load_NDVI_minimum.py  load_ball_berry_intercept_C3.py  load_ball_berry_slope_C3.py  load_ball_berry_slope_C4.py  load_carbon_uptake_efficiency.py  load_kn.py  load_peakVCmax_C3.py  load_peakVCmax_C4.py  process_BESS_latlon.py
BESS_JPL/: BESS_JPL.py  model.py
breathing_earth_system_simulator/: BESS.py  LAI_from_NDVI.py
